objects/Media_Player__c.object
<CustomObject>
    <description>PC Serial #s</description>
    <fields>
        <fullName>Colour__c</fullName>
        <label>Colour</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>Purple</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hard_Drive__c</fullName>
        <label>Hard Drive</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>128GB MSATA SSD</fullName>
                </value>
                <value>
                    <fullName>64GB MSATA SSD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAN_MAC_alt__c</fullName>
        <description>Alternative Lan MAC Address</description>
        <inlineHelpText>Alternative Lan MAC Address</inlineHelpText>
        <label>LAN MAC alt</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAC_Address__c</fullName>
        <label>LAN MAC</label>
        <length>17</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aleutia</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>AOpen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Media_Player_Model__c</fullName>
        <label>Media Player Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DE3250</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motherboard_Serial__c</fullName>
        <label>Motherboard Serial</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OS__c</fullName>
        <label>OS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Windows</fullName>
                </value>
                <value>
                    <fullName>Ubuntu</fullName>
                </value>
                <value>
                    <fullName>Mac OS</fullName>
                </value>
                <value>
                    <fullName>iOS</fullName>
                </value>
                <value>
                    <fullName>Android</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Processor__c</fullName>
        <label>Processor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Intel Celeron J1800 CPU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Production_Build__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Production Build</label>
        <referenceTo>Production_Build__c</referenceTo>
        <relationshipLabel>Media Players</relationshipLabel>
        <relationshipName>Media_Players</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RAM_Type__c</fullName>
        <label>RAM Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DDR3L</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RAM__c</fullName>
        <label>RAM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2GB</fullName>
                </value>
                <value>
                    <fullName>4GB</fullName>
                </value>
                <value>
                    <fullName>8GB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Software_Version__c</fullName>
        <description>10.0 - Original Image
10.1 - Corrected Image Fix
10.2 - Boot Order Fix
10.4 Telemetry update
10.3.1 - Ayuda Hang Fix &amp; Remote Log In
10.3 Ayuda Splash Player</description>
        <inlineHelpText>10.0 - Original Image
10.1 - Corrected Image Fix
10.2 - Boot Order Fix
10.4 Telemetry update
10.3.1 - Ayuda Hang Fix &amp; Remote Log In
10.3 Ayuda Splash Player</inlineHelpText>
        <label>Software Version</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>10.0</fullName>
                    <label>10.0 Original Image</label>
                </value>
                <value>
                    <fullName>10.1</fullName>
                    <label>10.1 Corrected Image Fix</label>
                </value>
                <value>
                    <fullName>10.2</fullName>
                    <label>10.2 Boot Order Fix</label>
                </value>
                <value>
                    <fullName>10.3</fullName>
                    <label>10.3 Ayuda Splash Player</label>
                </value>
                <value>
                    <fullName>10.3.1</fullName>
                    <label>10.3.1 Ayuda Hang Fix &amp; Remote Log In</label>
                </value>
                <value>
                    <fullName>10.4</fullName>
                    <label>10.4 Telemetry Update</label>
                </value>
                <value>
                    <fullName>10.5.0</fullName>
                </value>
                <value>
                    <fullName>11.1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WIFI__c</fullName>
        <label>WIFI</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No WIFI</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Media Player</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Manufacturer__c</columns>
        <columns>Colour__c</columns>
        <columns>Motherboard_Serial__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Processor__c</columns>
        <columns>RAM__c</columns>
        <columns>RAM_Type__c</columns>
        <columns>WIFI__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OS__c</columns>
        <columns>Hard_Drive__c</columns>
        <columns>MAC_Address__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_AOpen</fullName>
        <columns>NAME</columns>
        <columns>Manufacturer__c</columns>
        <columns>Colour__c</columns>
        <columns>Motherboard_Serial__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Processor__c</columns>
        <columns>RAM__c</columns>
        <columns>RAM_Type__c</columns>
        <columns>WIFI__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OS__c</columns>
        <columns>Hard_Drive__c</columns>
        <columns>MAC_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Manufacturer__c</field>
            <operation>equals</operation>
            <value>AOpen</value>
        </filters>
        <label>All AOpen</label>
    </listViews>
    <listViews>
        <fullName>All_Software_Versions</fullName>
        <columns>NAME</columns>
        <columns>Manufacturer__c</columns>
        <columns>Software_Version__c</columns>
        <columns>Colour__c</columns>
        <columns>Motherboard_Serial__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Processor__c</columns>
        <columns>RAM__c</columns>
        <columns>RAM_Type__c</columns>
        <columns>WIFI__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OS__c</columns>
        <columns>Hard_Drive__c</columns>
        <columns>MAC_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Software_Version__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Software Versions</label>
    </listViews>
    <nameField>
        <label>Media Player Serial</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media Players</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>MAC_Address_test</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
OR(
ISBLANK (MAC_Address__c),
REGEX( MAC_Address__c ,&quot;^([0-9A-Fa-f]{2}[:-]){5}([0-9A-Fa-f]{2})$&quot;)
)
)</errorConditionFormula>
        <errorDisplayField>MAC_Address__c</errorDisplayField>
        <errorMessage>Must be a valid MAC address, eg. 3D:F2:C9:A6:B3:4F</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MAC_FORMAT</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( 
OR( 
ISBLANK ( LAN_MAC_alt__c ), 
REGEX( LAN_MAC_alt__c  ,&quot;^([0-9A-Fa-f]{2}[:-]){5}([0-9A-Fa-f]{2})$&quot;) 
) 
)</errorConditionFormula>
        <errorDisplayField>LAN_MAC_alt__c</errorDisplayField>
        <errorMessage>Incorrect MAC Address Format</errorMessage>
    </validationRules>
</CustomObject>